k8s-LoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-service-loadbalancer
spec:
  selector:
    app: spring-boot-k8s-deploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
