k8s-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-k8s-service
spec:
  selector:
    app: spring-boot-k8s-deploy
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
