k8s-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-k8s-ingress
spec:
  ingressClassName: spring-boot-ingress-service
  rules:
    - host: localhost
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-k8s-service
                port:
                  number: 8080
